# master_icehockey_nlp_bot

./: .gitignore  LICENSE  README.md
python/: .dockerignore  Dockerfile  create_squad_file.py  hockey_rules_squad_refined.json  hockey_rules_squad_refined_2024-11-21_11.22.37.json  pyproject.toml  read_and_convert_pdf.py  refine_squad.py  requirements.txt  rules.json  rules_backup.json  test.json  test_roberta.py  test_roberta_translation.py  validate_rule_numbers.py
python/squad/: hockey_rules_squad_refined.json  hockey_rules_squad_refined_2024-11-21_11.47.51.json  hockey_rules_squad_refined_2024-11-21_12.19.25.json
python/squad/backup/: hockey_rules_squad_format.json  hockey_rules_squad_format_five_questions_per_rule.json  hockey_rules_squad_format_test.json
python/src/converting_data/: convert_rules_for_embedding.py  convert_situations_for_embedding.py  create_situation_squad_file.py  create_squad_file.py  read_and_convert_rulebook.py  read_and_convert_situation_handbook.py  refine_squad.py
python/src/roberta/: config.py  embedder.py  evaluator.py  semantic_searcher.py  test.py  trainer.py
python/src/rulebot/: __init__.py  answer_generator.py  api.py  auth.py  config.py  embedder.py  faiss_index_manager.py  prompt_builder.py  query_embedder.py  rag_pipeline.py  retriever.py  rule_book_retriever.py  rulebook_embedding_creator.py  situationhandbook_embedding_creator.py  text_chunker.py
python/src/test/: count_situations.py  gpt_rag_pipeline_test.py  query_embedder_test.py  test_get_api_key.py  validate_rule_numbers.py  validate_squad.py
(+116 files in other folders)
