[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rulebot"
authors = [
    {name = "Kenneth Englisch", email = "kenglisch7@gmx.de"},
]
description = "Package for ice hockey rules chatbot practicing."
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13", ]
requires-python = ">=3.12.0"
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
version = {attr = "rulebot.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["rulebot*"]  # package names should match these glob patterns (["*"] by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project.optional-dependencies]
dev = []

[project.urls]
Documentation = "https://github.com/aloosley/ice-hockey-rulebot-api/tree/main#readme"
Source = "https://github.com/aloosley/ice-hockey-rulebot-api"

[tool.setuptools.package-dir]
"" = "src"